refactor: sonarqube